--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ python-multipart==0.0.9
 
 # Database
 sqlalchemy==2.0.36
-psycopg2-binary==2.9.9
+psycopg2-binary==2.9.11
 pgvector==0.4.2
 
 
@@ -18,13 +18,15 @@ playwright==1.48.0
 beautifulsoup4==4.12.3
 requests==2.32.3
 aiohttp==3.9.5
-Pillow==10.4.0
+Pillow>=11.0.0
 
 # AI/ML
-openai==1.51.0
+groq>=0.9.0
+sentence-transformers>=2.2.0  # For local embeddings (no API required)
+torch>=2.0.0  # Required by sentence-transformers
 
 # Data validation
-pydantic==2.9.2
+pydantic==2.12.5
 
 # Utilities
 python-dotenv==1.0.1
